[0004972] betere (?) afhandeling van bestanden, poging om reportconfig file van http te krijgen, maar dat lukt nog niet.